<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".view.viewer.AndroidLinkActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"
        android:visibility="visible"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/primaryDark"
        android:id="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/app_connect_icon"
                    app:tint="@color/theme_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connection"
                    android:fontFamily="@font/josefont"
                    android:textColor="@color/theme_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:layout_gravity="center"
                    android:id="@+id/server_header"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/app_receive_icon"
                    app:tint="@color/theme_color" />
            </LinearLayout>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_background2"
                android:text="@string/credentials"
                android:fontFamily="@font/josefont"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:padding="10dp"
                android:layout_marginStart="5dp"

                android:id="@+id/server_setting"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="5dp"
                        android:text="@string/device_name"
                        android:fontFamily="@font/montserrat"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/colon_four"
                        android:text="@string/colon" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:background="@drawable/button_background2"
                        android:padding="15dp"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:textColorHint="@color/text_color"
                        android:textSize="15sp"
                        android:fontFamily="@font/montserrat"
                        android:textStyle="bold"
                        android:id="@+id/textNickname" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="5dp"
                        android:text="@string/username"
                        android:fontFamily="@font/montserrat"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/colon" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:background="@drawable/button_background2"
                        android:padding="15dp"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:fontFamily="@font/montserrat"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:id="@+id/textUsername" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="5dp"
                        android:text="@string/port_number"
                        android:fontFamily="@font/montserrat"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/colon_one"
                        android:text="@string/colon" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:background="@drawable/button_background2"
                        android:padding="15dp"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:fontFamily="@font/montserrat"
                        android:textStyle="bold"
                        android:textColorHint="@color/text_color"
                        android:textSize="15sp"
                        android:id="@+id/textPORT"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="5dp"
                        android:text="@string/ip_address"
                        android:fontFamily="@font/montserrat"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/colon_two"
                        android:text="@string/colon" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:background="@drawable/button_background2"
                        android:padding="15dp"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:digits="1234567890."
                        android:fontFamily="@font/montserrat"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:id="@+id/textIP" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="5dp"
                        android:text="@string/password"
                        android:fontFamily="@font/montserrat"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/colon_three"
                        android:text="@string/colon" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:background="@drawable/button_background2"
                        android:padding="15dp"
                        android:layout_weight="1"
                        android:inputType="textPassword"
                        android:textSize="15sp"
                        android:id="@+id/textPASSWORD"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="5dp"
                        android:text="Color Format"
                        android:fontFamily="@font/montserrat"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/colon_five"
                        android:text="@string/colon" />

                    <Spinner
                        android:id="@+id/colorformat"
                        android:padding="15dp"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:background="@drawable/button_background2"
                        android:layout_width="wrap_content"/>


                   <!-- <com.google.android.material.textfield.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background2"
                        android:layout_weight="1">

                        <AutoCompleteTextView
                            android:id="@+id/filled_exposed_dropdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:background="@color/transparent"
                            android:inputType="none"
                            />
                    </com.google.android.material.textfield.TextInputLayout>-->
                </TableRow>


            </TableLayout>



            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:background="@drawable/button_background"
                android:padding="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="40dp"
                android:textColor="@color/white"
                android:id="@+id/buttonGO"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/cardView"
        android:visibility="gone">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttonRepeater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeater_button"/>
            <TextView
                android:gravity="center" android:id="@+id/textRepeaterId"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/repeater_empty_text"/>
        </LinearLayout>
        <Button
            android:id="@+id/buttonImportExport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_export_settings"/>

        <CheckBox android:gravity="center"
            android:id="@+id/checkboxUseLocalCursor"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/local_mouse_check"/>

        <CheckBox android:id="@+id/checkboxKeepPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_password_button"
            android:layout_weight="0"/>

        <CheckBox
            android:id="@+id/checkboxUseOverlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/show_menu_overlay"
            />


        <Spinner
            android:id="@+id/spinnerConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/blue"
        android:elevation="25dp"
        android:visibility="gone"
        android:id="@+id/progressBar"/>

</RelativeLayout>